<resources>
    <string name="app_name">Shop</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="other">Other</string>
    <string name="register">REGISTER</string>
    <string name="day">DAY</string>
    <string name="month">MONTH</string>
    <string name="year">YEAR</string>
    <string name="upload">UPLOAD</string>
    <string name="invalidFields">All fields are required</string>
    <string name="click_here">Click here</string>
    <string name="not_registered">Not registered yet?</string>
    <string name="search">Search</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="or">OR</string>
    <string name="electronics">Electronics</string>
    <string name="games">Games</string>
    <string name="phones">Phones</string>
    <string name="car">Cars</string>
    <string name="home">Home</string>
    <string name="bike">Bikes</string>
    <string name="plant">Plants</string>
    <string name="tv"><![CDATA[TV & Audio]]></string>
    <string name="baby">Children</string>
    <string name="capture">Capture</string>
    <string name="skip">SKIP</string>
    <string name="Add">Add</string>
    <string name="amount">%d</string>
    <string name="sureClose">Are you sure you want to close?</string>
    <string name="sureDelete">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="adOverview">Advertisement overview</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="post">POST</string>
    <string name="choose">Choose category</string>
    <string name="EURO">€</string>
    <string name="categ">Category: </string>
    <string name="success">Successfully done</string>
    <string name="errorTitle">Please fill the title</string>
    <string name="errorPrice">Please fill the price</string>
    <string name="errorDescription">Please fill the description</string>

    <string-array name="category_list"></string-array>
    <string name="title_activity_profile">Profile</string>
    <string name="myProf">My Profile</string>
    <string name="myAdvert">My Advertisements</string>
    <string name="myFav">My Favourites</string>
    <string name="chat">Chat</string>
    <string name="camera">Camera</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_chat">Chat</string>

    <string name="typeMessage">Type your message here</string>
    <string name="send">SEND</string>
    <string name="cancel">CANCEL</string>

    <string name="addMessage">Please add message</string>
    <string name="title_activity_camera_x">Camera</string>
    <string name="authentication_required">AUTHENTICATION REQUIRED</string>
    <string name="menu_camera_view">Built-in Camera View</string>
    <string name="menu_image_analyzer">Image Analyzer</string>
    <string name="menu_image_capture">Image Capture</string>
    <string name="menu_advance_image_capture">Advance Image Capture</string>
    <string name="image_capture_success">Captured</string>
    <string name="image_capture_error">Image capture error with %1$s (%2$d)</string>
    <string name="video_record_success">Record</string>
    <string name="video_record_error">Video record error with %1$s (%2$d)</string>
    <string name="capture_image">Capture</string>
    <string name="start_record_video">Record</string>
    <string name="stop_record_video">Stop</string>
    <string name="switch_camera">Switch</string>
    <string name="flash_on">On</string>
    <string name="flash_off">Off</string>
    <string name="flash_auto">Auto</string>
    <string name="torch_on">On</string>
    <string name="torch_off">Off</string>
    <string name="zoom">Zoom</string>
    <string name="luma_value">Luma : %1$.2f</string>
    <string name="zoom_ratio">Zoom %1$.1fx</string>
    <string name="permission_denied">Please grant all camera-related permission</string>
    <string name="emptyList">There are no products</string>
    <string name="ok">OK</string>

    <string name="verifyEmail">Verify your e-mail address</string>
    <string name="emailVerficiationInfo">A verification code has been sent to your e-email address. Follow the instructions provided in the email to verify</string>
    <string name="resendCode">RESEND CODE</string>
    <string name="resendCodeSuccess">The code has been resent successfully</string>
    <string name="update">UPDATE</string>
    <string name="logout">LOG OUT</string>
    <string name="detecting">Detecting an appropriate category</string>
    <string name="foundCategory">We think the item you added is of %s category, we have already chosen this category but you can always change it</string>
    <string name="animals">Animals</string>
    <string name="Fashion">Fashion</string>
    <string name="computer">Computer</string>
    <string name="randomCode">Enter the code that you have received on your email</string>
    <string name="countdownCode">Resend code %s</string>
    <string name="verificationCodeRequired">Please fill the verification code</string>
    <string name="incorrectCode">The code is not correct</string>
    <string name="email_password_incorrect">Email/password are not correct</string>
    <string name="email_unknown">Email is not registered yet, please register!</string>

    <string name="product_overview">PRODUCT OVERVIEW</string>
    <string name="reset_password_text">Reset your password</string>
    <string name="reset">RESET</string>
    <string name="type_email">Type your email here</string>
    <string name="email_required">The email is required</string>
    <string name="email_sent">Check your email to reset your password</string>
    <string name="enter_code">Enter the code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_password">Reset password</string>
    <string name="confirm">CONFIRM</string>
    <string name="type_new_password">Type your new pasword here</string>
    <string name="confirm_password">Confirm your new password</string>
    <string name="password_unequal">The passwords did not match</string>
    <string name="password_updated">The password has been successfully updated</string>
</resources>